GNU findutils NEWS - User visible changes.      -*- outline -*- (allout)

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug Fixes

  'find -ignore_readdir_race' now better handles races between FTS reading a
  directory and visiting its entries when the file or directory was meanwhile
  removed. [#45930]

  To fix a POSIX compatibility bug, -exec foo Z{} + is no longer a
  complete predicate, because '+' is only a terminator when it follows
  an argument which is exactly '{}'.  The findutils documentation
  already states this, and now find's behaviour matches the
  documentation.

** Changes in find

  The actions -execdir and -okdir now refuse the '{}' replacement in the zeroth
  argument of the command to be run.  While POSIX allows this for -exec, this is
  deemed insecure as an attacker could influence which files could be found.

** Documentation Changes

  The forthcoming Issue 8 of the POSIX standard will standardise "find
  -print0" and "xargs -0".  Our documentation now points this out.


* Noteworthy changes in release 4.10.0 (2024-06-01) [stable]

** Bug Fixes

  Find now defaults to optimization level 1 rather than 2 and the
  cost-based optimizer will only run at level 2 and above.  This
  should prevent changes of operation order which result in
  user-visible differences in behaviour. [#58427]

  If the -P option to xargs is not used, xargs will not change the way
  in which the SIGUSR1 and SIGUSR2 signals are handled.  This means
  that they will cause the program to terminate if the signals were
  not ignored in the process which started xargs.  This also means that
  xargs does not use parallel execution at all.
  If you start xargs with '-P 1', then xargs will not be killed by these
  signals, and they instead change the degree of parallelism.
  This change improves xargs' POSIX compliance.

  'xargs -P' now waits for all its child processes to complete before
  exiting, even if one of them exits with status 255. [#64451]
